--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./img/icono.ico" type="image/ico">
+    <title>Guessing Game</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Guessing Game 🤹🏽‍♀️</title>
-</head>
-
-<body>
-    <h1>Guess the number</h1>
-    <p>Enter one number between 1 and 100:</p>
-    <input type="number" id="entryNumber">
-    <button onclick="checkResult()">Check! </button>
-    <p id="message"></p>
-    <h4>Number of lives: </h4>
-    <p id="live"></p>
+  <body>
+    <div class="container">
+      <h1>¡Guess the number! 💭</h1>
+      <p>Enter one number between 1 and 100:</p>
+      <input type="number" id="entryNumber" />
+      <button onclick="checkResult()">Check!</button>
+      <p id="message"></p>
+      <h4>Number of clicks:</h4>
+      <p id="live"></p>
+    </div>
 
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
